--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -15,12 +15,12 @@
     padding-top: 200px;
     padding-bottom: 200px;
 }
-/* @media (min-device-pixel-ratio: 2),(min-resolution: 192dpi),(min-resolution: 2dppx) {
+@media (min-device-pixel-ratio: 2),(min-resolution: 192dpi),(min-resolution: 2dppx) {
     .hero {
         background-image:linear-gradient(rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)), url(/imagesmobopt/hero-mob-img@2x.jpg);
     } 
-}*/
+}
 
 .hero__conteiner{
         text-align: center;
