--- a/css/main.css
+++ b/css/main.css
@@ -863,12 +863,11 @@ img {
   padding-bottom: 200px;
 }
 
-/* @media (min-device-pixel-ratio: 2),(min-resolution: 192dpi),(min-resolution: 2dppx) {
-    .hero {
-        background-image:linear-gradient(rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)), url(/imagesmobopt/hero-mob-img@2x.jpg);
-    } 
-}*/
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/imagesmobopt/hero-mob-img@2x.jpg);
+  }
+}
 .hero__conteiner {
   text-align: center;
 }
@@ -901,8 +900,7 @@ img {
 @media screen and (min-width: 768px) {
   .hero {
     max-width: 768px;
-    /* background-image:linear-gradient(rgba(47, 48, 58, 0.4),
-    rgba(47, 48, 58, 0.4)), url(/imagestabopt/Header_img.jpg); */
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/imagestabopt/Header_img.jpg);
   }
 }
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
