--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -60,8 +60,8 @@
         max-width: 768px;
         
        
-        /* background-image:linear-gradient(rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)), url(/imagestabopt/Header_img.jpg); */
+        background-image:linear-gradient(rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)), url(/imagestabopt/Header_img.jpg);
         
     }
     @media (min-device-pixel-ratio: 2),(min-resolution: 192dpi),(min-resolution: 2dppx) {
@@ -87,9 +87,9 @@
     .hero{
     max-width: 1600px;
     height: 600px;
-    /* background-image:linear-gradient(rgba(47, 48, 58, 0.4),
+    background-image:linear-gradient(rgba(47, 48, 58, 0.4),
     rgba(47, 48, 58, 0.4)), url(/images/heroiImg.jpg);
-    } */
+    }
 @media (min-device-pixel-ratio: 2),(min-resolution: 192dpi),(min-resolution: 2dppx) {
         .hero {
             background-image:linear-gradient(rgba(47, 48, 58, 0.4),
