--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -122,4 +122,12 @@
     .logo__footer{
         margin: 0 0 20px 0;
     }
+    .communication__text{
+        
+        
+    }
+    .communication{
+        align-items: flex-start;
+    }
+    
 }
