--- a/sass/components/_mobail-menu.scss
+++ b/sass/components/_mobail-menu.scss
@@ -3,16 +3,13 @@
     visibility: hidden;
 }
 .mobail-menu{
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     width: 100%;
     height: 100vw;
     z-index: 200;
     opacity: 1;
-    
-   
-    
 }
 .mobail-menu__conteiner{
     padding-top: 48px;
@@ -20,8 +17,6 @@
     padding-bottom: 48px;
 
     background-color: var(--maine__color__light);
-    
-    
 }
 
 .mobail-menu__close-btn{
@@ -81,12 +76,9 @@ letter-spacing: 0.02em;
 }
 
 .mobail-menu__tel{
-    
-
 font-weight: 500;
 font-size: 34px;
 line-height: 40px;
-
 
 letter-spacing: 0.02em;
 
