--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -8,7 +8,7 @@
     max-width: 480px;
     max-height: 400px;
     background-image:linear-gradient(rgba(47, 48, 58, 0.4),
-    rgba(47, 48, 58, 0.4)),url(/imagesmobopt/hero-mob-img.jpg);
+    rgba(47, 48, 58, 0.4)),url(../imagesmobopt/hero-mob-img.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -18,7 +18,7 @@
 @media (min-device-pixel-ratio: 2),(min-resolution: 192dpi),(min-resolution: 2dppx) {
     .hero {
         background-image:linear-gradient(rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)), url(/imagesmobopt/hero-mob-img@2x.jpg);
+        rgba(47, 48, 58, 0.4)), url(../imagesmobopt/hero-mob-img@2x.jpg);
     } 
 }
 
@@ -61,13 +61,13 @@
         
        
         background-image:linear-gradient(rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)), url(/imagestabopt/Header_img.jpg);
+        rgba(47, 48, 58, 0.4)), url(../imagestabopt/Header_img.jpg);
         
     }
     @media (min-device-pixel-ratio: 2),(min-resolution: 192dpi),(min-resolution: 2dppx) {
         .hero {
             background-image:linear-gradient(rgba(47, 48, 58, 0.4),
-            rgba(47, 48, 58, 0.4)), url(/imagestabopt/Header_img@2x.jpg);
+            rgba(47, 48, 58, 0.4)), url(../imagestabopt/Header_img@2x.jpg);
         }
     
     }
@@ -86,14 +86,15 @@
 @media screen and (min-width: 1200px){
     .hero{
     max-width: 1600px;
-    height: 600px;
+    
+    padding: 200px 0 200px 0;
     background-image:linear-gradient(rgba(47, 48, 58, 0.4),
-    rgba(47, 48, 58, 0.4)), url(/images/heroiImg.jpg);
+    rgba(47, 48, 58, 0.4)), url(../images/heroiImg.jpg);
     }
 @media (min-device-pixel-ratio: 2),(min-resolution: 192dpi),(min-resolution: 2dppx) {
         .hero {
             background-image:linear-gradient(rgba(47, 48, 58, 0.4),
-            rgba(47, 48, 58, 0.4)), url(/images/hero@2x.jpg);
+            rgba(47, 48, 58, 0.4)), url(../images/hero@2x.jpg);
         }
 }
 }
